# signalledger

./: .dockerignore  .gitignore  .gitlab-ci.ecl-trainer.yml  .pre-commit-hooks.yaml  Dockerfile.ecl-trainer  LICENSE  MANIFEST.in  README.md  ecl-trainer.manifest.json  pyproject.toml  verify_ecl_compliance.py
.github/ISSUE_TEMPLATE/: using-signalledger.yml
.github/workflows/: archive-adoption-signals.yml  ecl-trainer.yml  (+2 more)
atlas_pipeline/: __init__.py  build_atlas.py  schemas.py
docs/: ADOPTION_TRACKING.md  AXOLOTL_PLUGIN.md  COMPLIANCE_POSITIONING.md  GITHUB_ACTION.md  GITLAB_CI.md  HUGGINGFACE_CALLBACK.md  INTELLIGENT_CONTEXT_ATLAS.md  INTELLIGENT_CONTEXT_ATLAS_COLLECTION.md  NO_PAYLOAD_POLICY.md  RISK_WEIGHT_METHODOLOGY.md  SCHEMA.md  SUPPLY_CHAIN_EVIDENCE.md
ecl_trainer/: __init__.py  cli.py  governance.py  mlops_pack.py  red_team.py  ux.py
scripts/: ecl_trainer_clean_room_check.sh  track_public_action_usage.py
tests/: test_atlas_pipeline.py  test_axolotl_plugin.py  test_ci_runners.py  test_ci_scanner.py  test_cli.py  test_compliance_reports.py  test_control_plane_clients.py  test_ecl_ux.py  test_financial_services_seed_fixture.py  test_hash_chain.py  test_huggingface_callback.py  test_huggingface_cards.py  test_lifecycle_freshness.py  test_lifecycle_sync.py  test_local_ci_artifacts.py  test_mlops_pack.py  test_no_payload_policy.py  test_oracle_atlas.py  test_pr_comment_renderer.py  test_red_team_fixture_corpus.py  test_red_team_no_payload_boundaries.py  test_risk_gatekeeper.py  test_signal_hasher.py  test_supply_chain_evidence.py  test_value_processor.py
(+138 files in other folders)
