[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ecl-trainer"
version = "0.1.0rc1"
description = "Metadata-only training signal ledger SDK"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2",
  "typer>=0.12",
  "httpx>=0.27",
  "PyYAML>=6.0",
  "duckdb>=1.1",
]

[project.optional-dependencies]
test = ["pytest>=8"]
dev = [
  "pytest>=8",
  "build>=1.2",
  "ruff>=0.8",
  "mypy>=1.13",
  "bandit>=1.7",
  "pip-audit>=2.7",
  "pyright>=1.1",
]

[project.scripts]
ecl-trainer = "ecl_trainer.cli:app"

[tool.setuptools.packages.find]
include = ["ecl_trainer*", "atlas_pipeline*"]

[tool.setuptools.package-data]
ecl_trainer = ["red_team_fixtures/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 120
extend-exclude = ["node_modules", "dist", "build"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S"]
ignore = [
  "S101",
  "S106",
  "S311",
]

[tool.mypy]
python_version = "3.11"
packages = ["ecl_trainer", "atlas_pipeline"]
ignore_missing_imports = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = true

[tool.pyright]
include = ["ecl_trainer", "atlas_pipeline"]
pythonVersion = "3.11"
typeCheckingMode = "basic"

[tool.bandit]
exclude_dirs = ["tests", "node_modules", "dist", "build"]
skips = ["B101", "B106", "B311"]
